--- a/website/www/index.html
+++ b/website/www/index.html
@@ -7,9 +7,33 @@
         <title>Justin Lex-Hammarskjöld</title>
         
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+        <style type="text/css">
+            header {
+                width: 100%;
+                background-image: url(banner.jpg);
+                background-size: cover;
+                padding-top: 77%; /*hard-coded 1.3 aspect ratio for picture*/
+            }
+            header-text {
+                position:absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                text-align: center;
+                padding-top: 51%; /* .77*.66, gives us a lower third in our picture */
+                font-size:7vw;
+                color:#ffffff;
+            }
+        </style>
     </head>
     <body>
+        <header>
+           <!-- Justin Lex-Hammarskjöld-->
+       <!-- <img src="banner.jpg" class="img-fluid" alt="Ååååka Pendeltåg!"> -->
+            <header-text >Justin Lex-Hammarskjöld</header-text>
+        </header>
         <h1>HELLO THERE</h1>
-        <img src="banner.jpg" class="img-fluid" alt="Ååååka Pendeltåg!">
     </body>
 </html>
